# FileSort

./: .gitignore  CMakeLists.txt  README.md
src/: fgen_main.cpp  fsort.hpp  fsort_main.cpp  mmap.cpp  mmap.hpp
